Fix Toggle Collapse. Add padding Main on Tablette Mode. Delete min-height: 100vh on main style.

--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -9,7 +9,6 @@
   border-radius: 25px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   transition: height 0.8s ease;
-  overflow: hidden;
 
   @media (max-width: 1280px) {
     height: 170px;
@@ -17,8 +16,6 @@
 
   @media (max-width: 768px) {
     height: 110px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12);
-    border-radius: 10px;
   }
 
   &__overlay {
@@ -29,6 +26,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 25px;
   }
 
   &__image {
@@ -37,6 +35,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 25px;
   }
 
   &__title {
