--- a/src/components/Carrousel/carrousel.scss
+++ b/src/components/Carrousel/carrousel.scss
@@ -96,7 +96,7 @@
     }
 
     @media (max-width: 768px) {
-      font-size: 16px;
+      display: none;
     }
   }
 }
